SUPER-CATEGORY-ONELINERS-TERMINOLOGY-ENOTES
