# backend/Routes/api/superCategory.Routes.js
@@ -1,0 +1,8 @@
+import express from 'express'
+const router=express.Router()
+import { postSuperCategory,getSuperCategories } from '../../Controllers/SuperCategory.Controller.js'
+
+router.post('/',postSuperCategory)
+router.get('/',getSuperCategories)
+
+export default router
