# backend/server.js
@@ -8,6 +8,9 @@ import Axios from 'axios'
 import UserRoutes from './Routes/api/user.Routes.js'
 import ConceptRoutes from './Routes/api/concept.Routes.js'
 import MockTestRoutes from './Routes/api/PractiseTest.Routes.js'
+import TerminologyRoutes from './Routes/api/terminology.Routes.js'
+import OneLiners from './Routes/api/oneLiner.Routes.js'
+import SuperCategory from './Routes/api/superCategory.Routes.js'
 
 import { createRequire } from "module";
 const require = createRequire(import.meta.url); // construct the require method
@@ -31,11 +34,16 @@ app.get('/',(req,res)=>{
 
 app.use('/api/user',UserRoutes)
 app.use('/api/concepts',ConceptRoutes)
+// app.use('/api/concepts',ConceptRoutes)
 app.use('/api/mock-test',MockTestRoutes)
+app.use('/api/terminology',TerminologyRoutes)
+app.use('/api/one-liners',OneLiners)
+app.use('/api/supercategories',SuperCategory)
+
 
 app.get('/get',async(req,res)=>{
     const {data}=await Axios.get('https://script.googleusercontent.com/macros/echo?user_content_key=6UTQpnRJNRwlU-XnzU3LQFhumGx9UQPStT93MHwmXmxIhRalYGP4Z2c4Rw2HWR1WeAeqMvPhyxt41TCU0Z7DvQjnSM07LOdFm5_BxDlH2jW0nuo2oDemN9CCS2h10ox_1xSncGQajx_ryfhECjZEnH810grv4XdUG_LwF2eyuMa5ufkfaA__S5UK4miFUlt12chAkuCJLDM1zrPx1aiUl95iAjojgKbQq7vfscZ4onCrcFK6sgX0iw&lib=Ms-_GpD7w53h-KAzT1xgMOxu7vu5ZmFTa')
     res.send(data)
 })
 
-app.listen(process.env.PORT || 5005, console.log(`Server running in ${process.env.PORT}`))
+app.listen(process.env.PORT || 5005, console.log(`DigrowServer running in ${process.env.PORT}`))
